warnings in SecurityFactory fixed